# chatgpt-image-batcher

./: .gitignore  README.md  image_gen.py  match_images.py  pyproject.toml
examples/: prompts.json
src/: browser.py  chatgpt.py  prompts.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_prompts.py
