[tool.poetry]
name = "chatgpt-image-generator"
version = "0.1.0"
description = "Playwright-driven batch image generator for ChatGPT"
authors = ["matt <matmigg0804@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.59"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that hit real ChatGPT (require auth)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
